<resources>
    <string name="app_name">Online Donation Project</string>
    <string name="wanna_raise_a_fund">Wanna Raise A Fund?</string>
    <string name="wanna_donate">Wanna Donate?</string>
    <string name="Password">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="are_you_not_registered">Are you not registered?</string>
    <string name="enter_your_organization">Enter your organization</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_your_bkash_number">Enter Your Bkash Number</string>
    <string name="enter_your_email_address">Enter your Email address</string>
    <string name="save_data">Save Data</string>
    <string name="load_data">Load Data</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="rocket_no">Rocket No</string>
    <string name="text">text</string>
    <string name="type">Type</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="bkash_no">Bkash no</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="organization">Organization</string>
    <string name="bkash_number">Bkash Number</string>
    <string name="email_address">Email Address</string>
    <string name="bkash">Bkash</string>
    <string name="rocket">Rocket</string>
    <string name="fundraiser">FundRaiser</string>
    <string name="donor">Donor</string>
</resources>
